--- a/index.pug
+++ b/index.pug
@@ -22,12 +22,6 @@ html(lang="en")
             .container
                 .logo
                     img(src="img/logo.png", alt="")
-                nav
-                    .menu-link menu
-                    .menu-link about
-                    .menu-link steps
-                    .menu-link sing-in
-                    .menu-link footer
         section.first
             .container
                 .left
@@ -54,7 +48,7 @@ html(lang="en")
             .count
                 h2
                     i(class="fas fa-exclamation-triangle")
-                    |	&nbsp;warning!
+                    |	&nbsp;atencion!
                 p Due to extremely high media demand, we will close registration as of
                 p
                     span.data
@@ -75,12 +69,11 @@ html(lang="en")
                         span Bid 3864.00$
                     .block
                         span Ask 3861.70$
-        //- .people-wrap
         section.second
-            img(src="img/bg3.jpg", alt="" class="thumbnail")
+            img(src="img/white.pnxg", alt="" class="thumbnail")
             .container
                 h2 Join Us and Start Getting Rich 
-                    | with Bitcoin Revolution!
+                    span with Bitcoin Revolution!
                 p The Bitcoin Revolution is a group 
                     |reserved exclusively to people who 
                     |jumped on the insane returns that 
@@ -90,3 +83,10 @@ html(lang="en")
                     |they make money on their laptop with just a 
                     |few minutes of “work” every day.
         section.third
+            .container
+                .people-wrap
+                .girl
+                    img(src="img/girl.png", alt="")
+                
+                    
+
