--- a/css/style.css
+++ b/css/style.css
@@ -21,24 +21,6 @@
   height: 60px;
   transition: 0.5s;
 }
-.nav-bar .container nav {
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-.nav-bar .container nav .menu-link {
-  font-size: 1.3rem;
-  display: flex;
-  align-items: center;
-  padding: 1rem;
-  text-transform: uppercase;
-  color: #fff;
-  line-height: 0;
-  height: 100%;
-}
-.nav-bar .container nav .link-active {
-  border-bottom: 1px solid #fff;
-}
 .first {
   position: relative;
   background: url("../img/bg1.jpg") no-repeat;
@@ -48,7 +30,7 @@
   width: 100%;
   height: 100%;
   transition: 1s all;
-  padding-top: 100px;
+  padding-top: 150px;
   padding-bottom: 100px;
 }
 .first .count {
@@ -371,8 +353,6 @@
   font-size: 1.5rem;
 }
 .people-wrap {
-  position: absolute;
-  top: 100px;
   padding-top: 50px;
   width: 100%;
   max-width: 4000px;
@@ -405,12 +385,10 @@
   opacity: 0;
 }
 .second {
-  background: rgba(0,0,0,0.839);
   width: 100%;
-  height: 500px;
+  height: 400px;
   overflow: hidden;
   position: relative;
-  box-shadow: inset 0px 24px 50px -13px #000;
 }
 .second img {
   width: 100%;
@@ -431,18 +409,33 @@
   font-size: 4rem;
   max-width: 760px;
   font-weight: 700;
-  color: #fff;
-  text-shadow: 0px 0px 17px #000;
+  color: #044b82;
   padding: 1rem 0;
+}
+.second .container h2 span {
+  color: #044b82;
+  background-image: none;
 }
 .second .container p {
   max-width: 760px;
   font-size: 1.1rem;
-  color: #fff;
+  color: #012948;
 }
 .third {
   width: 100%;
-  height: 100vh;
+  height: 600px;
+}
+.third .container {
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.third .container .girl {
+  position: absolute;
+  bottom: 0;
+  right: -30%;
 }
 .loader {
   position: fixed;
