--- a/style.styl
+++ b/style.styl
@@ -19,21 +19,6 @@
             img
                 height: 60px
                 transition: 0.5s
-        nav
-            display: flex
-            align-items: center
-            height 100%
-            .menu-link
-                font-size: 1.3rem
-                display: flex
-                align-items: center
-                padding: 1rem
-                text-transform: uppercase
-                color: #ffffff
-                line-height: 0
-                height 100%
-            .link-active
-                border-bottom: 1px solid white
 .first
     position relative
     background: url(../img/bg1.jpg) no-repeat
@@ -43,7 +28,7 @@
     width: 100%
     height 100%
     transition: 1s all
-    padding-top: 100px
+    padding-top: 150px
     padding-bottom: 100px
     .count
         background: #012948c7
@@ -186,7 +171,6 @@
                     color: #ffffff
                     margin: 0
                 form
-                    // background: url(../form.png) center center
                     position relative
                     background: #ffffff
                     background-size: cover
@@ -238,8 +222,6 @@
                 color: orange
                 font-size: 1.5rem
 .people-wrap
-    position: absolute
-    top: 100px
     padding-top: 50px
     width: 100%
     max-width: 4000px
@@ -266,12 +248,11 @@
         &:last-child
             opacity 0
 .second
-    background: #000000d6
+    // background: #ffffffd4
     width: 100%
-    height: 500px
+    height: 400px
     overflow hidden
     position: relative
-    box-shadow: inset 0px 24px 50px -13px #000000;
     img
         width: 100%
         position: absolute
@@ -289,16 +270,29 @@
             font-size: 4rem
             max-width: 760px
             font-weight: 700
-            color: #fff
-            text-shadow: 0px 0px 17px #000000
+            color: #044b82
             padding: 1rem 0
+            span
+                color: #044b82
+                background-image: none
         p 
             max-width 760px
             font-size: 1.1rem
-            color: #fff
+            color: #012948
 .third
     width: 100%
-    height: 100vh
+    height: 600px
+    .container
+        position relative
+        height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: center
+        .girl
+            position: absolute
+            bottom: 0
+            right -30%
+
 .loader
     position: fixed
     top: 0
